adding lectures notebooks, etc.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Modern Programming for Data Analytics - TITLE HERE</title>
+		<title>Modern Programming for Data Analytics - pandas</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -19,10 +19,58 @@
 
 	<body>
 		<div class="reveal">
-                  <div class="slides">
+      <div class="slides">
 		    <section id="titleSlide">
-			<h2> Modern Programming for Data Analytics - TITLE HERE </h2>
+					<h2> Modern Programming for Data Analytics - pandas</h2>
 		    </section>
+				<section>
+					<section>
+						<h3>What is pandas?</h3>
+						<ul class="r-fit-text">
+							<li>a Python package that provides fast, flexible and expressive data structures
+							<li>designed to work with relational and labeled data
+							<li>it is suited to work with:
+								<ul>
+									<li>tabular data with heterogenous types
+									<li>ordered and unordered times series data
+									<li>arbitrary matrix data
+									<li>observational /statistical data sets
+								</ul>
+							<li>pandas is fast, many high-performance algorithms under the hood
+							<li>
+						</ul>
+					</section>
+					<section>
+						<h3>pandas does well:</h3>
+						<ul class="r-fit-text">
+							<li>handling of missing
+							<li>mutable data structures (inserting and deleting data)
+							<li>automatic and explicit data alignment
+							<li>flexible groupby functionality and advanced data querying
+							<li>high interperability with NumPy and SciPy
+							<li>easy and intelligent slicing, indexing and subsetting of large data sets
+							<li>intuiting merging and joining of data
+							<li>hierarchical and multilevel datasets
+							<li>robust i/o operations to read and write multiple data formats
+							<li>time series specific functionality
+						</ul>
+					</section>
+					<section>
+						<h3>pandas Data Structures</h3>
+						<ul class="r-fit-text">
+							<li><b>Series</b> - 1-D labeled homogeneously-typed array (that type may be <b>object</b>)
+							<li><b>DataFrame</b> - General 2D labeled, size mutable tabular structure with potentially
+								heterogenous-typed columns
+						</ul>
+					</section>
+					<section>
+						<h3>pandas DataFrame</h3>
+							<img src="static/images/pandasDF.PNG" height=200>
+							<img src="static/images/pandasDFcode.PNG" height=300>
+					</section>
+
+
+				</section>
 		  </div>
 		</div>
 
